--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -341,70 +341,55 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BW7-km-DJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-599" y="400"/>
+            <point key="canvasLocation" x="-616" y="497"/>
         </scene>
-        <!--Edit Rep View Controller-->
+        <!--Edit RestUI Picker View Controller-->
         <scene sceneID="r4F-mc-Glw">
             <objects>
-                <viewController storyboardIdentifier="editRepViewController" id="U0W-6S-Mnl" customClass="EditRepViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="1yA-n1-9KW">
-                        <rect key="frame" x="0.0" y="20" width="394" height="270"/>
+                <viewController storyboardIdentifier="editRestViewController" id="U0W-6S-Mnl" customClass="EditRestUIPickerViewController" sceneMemberID="viewController">
+                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="1yA-n1-9KW">
+                        <rect key="frame" x="0.0" y="20" width="148" height="216"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" id="ttR-Mw-PhW">
-                                <rect key="frame" x="-8" y="53" width="65" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
-                            <pickerView contentMode="scaleToFill" id="JiT-r6-PFK">
-                                <rect key="frame" x="104" y="53" width="71" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
                             <pickerView contentMode="scaleToFill" id="QpY-Dm-gdZ">
-                                <rect key="frame" x="205" y="53" width="149" height="216"/>
+                                <rect key="frame" x="0.0" y="0.0" width="149" height="216"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="X" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5uV-7N-eLe">
-                                <rect key="frame" x="81" y="156" width="12" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Rest (min/sec)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hiX-vf-NkC">
-                                <rect key="frame" x="249" y="20" width="110" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Reps" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="00W-3h-xbe">
-                                <rect key="frame" x="0.0" y="20" width="40" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Weight" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="A8S-wg-isM">
-                                <rect key="frame" x="118" y="20" width="53" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
-                        <outlet property="repPickerView" destination="ttR-Mw-PhW" id="T4d-6r-wLV"/>
-                        <outlet property="restPickerView" destination="QpY-Dm-gdZ" id="rMp-Ld-bwK"/>
-                        <outlet property="weightPickerView" destination="JiT-r6-PFK" id="44J-KQ-T3q"/>
+                        <outlet property="pickerView" destination="QpY-Dm-gdZ" id="YvA-Ef-dEw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8h-oM-Eyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-537" y="59"/>
+            <point key="canvasLocation" x="240" y="-322"/>
+        </scene>
+        <!--Edit WeightUI Picker View Controller-->
+        <scene sceneID="Vmk-uR-gdO">
+            <objects>
+                <viewController storyboardIdentifier="editWeightViewController" id="7Ug-Ah-1gb" customClass="EditWeightUIPickerViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4oE-Mm-6C7">
+                        <rect key="frame" x="0.0" y="20" width="70" height="216"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" id="LCp-XQ-xWh">
+                                <rect key="frame" x="0.0" y="0.0" width="71" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="pickerView" destination="LCp-XQ-xWh" id="V2q-66-d1e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="14j-wW-BeO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="24" y="-322"/>
         </scene>
         <!--Exercise View Controller-->
         <scene sceneID="QcM-bn-2gg">
@@ -591,9 +576,6 @@
                         <outlet property="repScrollView" destination="nX4-B0-ZI2" id="HH6-2Y-oY9"/>
                         <outlet property="tableView" destination="xcW-NM-DaJ" id="SBJ-5j-pKa"/>
                         <segue destination="yMz-c6-lXo" kind="modal" identifier="loadProgram" modalPresentationStyle="formSheet" id="RNa-se-r7c"/>
-                        <segue destination="U0W-6S-Mnl" kind="popover" identifier="editRep" popoverAnchorView="nX4-B0-ZI2" id="eEX-h5-tML">
-                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                        </segue>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="36b-EY-YON" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -661,6 +643,30 @@
             </objects>
             <point key="canvasLocation" x="-599" y="-652"/>
         </scene>
+        <!--Edit RepUI Picker View Controller-->
+        <scene sceneID="mjb-Z3-FZa">
+            <objects>
+                <viewController storyboardIdentifier="editRepViewController" id="BM3-SC-boF" customClass="EditRepUIPickerViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7uP-KW-W8s">
+                        <rect key="frame" x="0.0" y="20" width="70" height="216"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" id="OE2-fF-naN">
+                                <rect key="frame" x="0.0" y="0.0" width="71" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="pickerView" destination="OE2-fF-naN" id="qcw-dp-Zei"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kjS-k6-pGN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="128" y="-322"/>
+        </scene>
     </scenes>
     <resources>
         <image name="45dc8608037206cbb7a8fa9648.jpg" width="2560" height="1600"/>
@@ -676,12 +682,22 @@
                 <relationship kind="outlet" name="pickerView" candidateClass="UIPickerView"/>
             </relationships>
         </class>
-        <class className="EditRepViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditRepViewController.h"/>
+        <class className="EditRepUIPickerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditRepUIPickerViewController.h"/>
             <relationships>
-                <relationship kind="outlet" name="repPickerView" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="restPickerView" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="weightPickerView" candidateClass="UIPickerView"/>
+                <relationship kind="outlet" name="pickerView" candidateClass="UIPickerView"/>
+            </relationships>
+        </class>
+        <class className="EditRestUIPickerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditRestUIPickerViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="pickerView" candidateClass="UIPickerView"/>
+            </relationships>
+        </class>
+        <class className="EditWeightUIPickerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditWeightUIPickerViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="pickerView" candidateClass="UIPickerView"/>
             </relationships>
         </class>
         <class className="ExerciseViewController" superclassName="UIViewController">
